# pego

./: .gitignore  AGENTS.md  README.md  pegoctl  pyproject.toml  wrangler.jsonc
.github/workflows/: pego-ci.yml
decisions/: 2026-06-21-adopt-pego.md  2026-06-22-runtime-neutral-agent-infrastructure.md  README.md
ops/: README.md  pego_doctor.py  pego_registry.py  private_root.py  run_smoke_tests.py  schema_validation.py  test_pegoctl.py  test_schema_contracts.py
ops/anticipation/: README.md  generate_scan.py  test_generate_scan.py
ops/attention/: decide_attention.py  test_decide_attention.py
ops/communications/: README.md  generate_public_writing_brief.py  test_generate_public_writing_brief.py
ops/context/: README.md  apply_context_updates.py  promote_session_review.py  record_context_update.py  test_apply_context_updates.py  test_external_private_root.py  test_promote_session_review.py  test_record_context_update.py
ops/council/: decision_to_candidate.py  synthesize_decision.py  test_decision_to_candidate.py  test_synthesize_decision.py
ops/cycles/: README.md  daily_cycle.py  monthly_cycle.py  test_daily_cycle.py  test_monthly_cycle.py  test_weekly_cycle.py  weekly_cycle.py
ops/directives/: README.md  generate_daily_directive.py  next_directive.py  test_generate_daily_directive.py  test_next_directive.py
ops/evaluation/: run_scenario_benchmarks.py  test_run_scenario_benchmarks.py
ops/finance/: README.md  generate_check_in.py  review_scenarios.py  run_scenarios.py  (+3 more)
pego/: README.md  principles.md
private/: README.md
site/: index.html  styles.css
(+232 files in other folders)
